<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberDisplay"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="0"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="324dp"
        android:layout_height="75dp"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberDisplay"
        app:layout_constraintVertical_bias="0.13">

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:background="#BABABA"
            android:onClick="numbers"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:background="#BABABA"
            android:onClick="numbers"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:background="#BABABA"
            android:onClick="numbers"
            android:text="@string/three" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:background="#BABABA"
            android:onClick="numbers"
            android:text="@string/four" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="324dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_margin="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="numbers"
            android:text="@string/five"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="numbers"
            android:text="@string/six"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="numbers"
            android:text="@string/seven"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="numbers"
            android:text="@string/eight"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="324dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_margin="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="numbers"
            android:text="@string/nine"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="numbers"
            android:text="@string/zero"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="numbers"
            android:text="@string/dot"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="equalButton"
            android:text="@string/equal"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="324dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_margin="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="operatorFun"
            android:text="@string/add"
            android:textSize="20dp"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="operatorFun"
            android:text="@string/subtract"
            android:textSize="20dp"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="operatorFun"
            android:text="@string/multiply"
            android:textSize="20dp"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:onClick="operatorFun"
            android:text="@string/divide"
            android:textSize="20dp"
            android:background="#BABABA"
            android:layout_margin="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="324dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.32999998">

        <Button
            android:id="@+id/button17"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginEnd="62dp"
            android:background="#BABABA"
            android:onClick="clearInput"
            android:text="@string/allClear" />

        <Button
            android:id="@+id/button18"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginStart="62dp"
            android:background="#BABABA"
            android:onClick="closeApp"
            android:text="@string/exit" />

    </LinearLayout>

    <Button
        android:id="@+id/button19"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:background="#BABABA"
        android:onClick="backSpace"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberDisplay"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/button20"
        android:layout_width="50dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:text="H"
        android:onClick="showHistory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numberDisplay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />


</androidx.constraintlayout.widget.ConstraintLayout>